--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,13 @@ html,body{
 }
 @layer utilities {
     h1 {
-      @apply text-white;
+      @apply text-black;
     }
     h2 {
-        @apply text-white;
+        @apply text-black;
       }
     p {
-        @apply text-white;
+        @apply text-black;
       }
   }
   ::-webkit-scrollbar {
